fix incon vertical align

--- a/simplq/src/components/common/Button/button.module.scss
+++ b/simplq/src/components/common/Button/button.module.scss
@@ -33,8 +33,7 @@
 }
 
 .icon {
-  display: inline;
-  vertical-align: middle;
+  display: flex;
   margin-right: 0.5rem;
 }
 
